@@ -11,6 +11,8 @@
 	  - Sacrificed readability for efficiency! The network dump functions
 	    now use the traverse list function.
 
+	  - Now add_rel() uses the traverse list function too.
+
 	* test/mem_test.sh :
 
 	  - Removed BASH extensions like arrays, $[], etc.
